<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".selectitem">

    <Button
        android:id="@+id/button_milk"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="48dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="16dp"
        android:onClick="selectItem"
        android:textColor="#FFFFFF"
        android:text="@string/milk"
        app:autoSizeTextType="uniform"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/button_oil"
        app:layout_constraintTop_toBottomOf="@+id/button_salt" />

    <Button
        android:id="@+id/button_eggs"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="48dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="16dp"
        android:onClick="selectItem"
        android:text="@string/eggs"
        android:textColor="#FFFFFF"
        app:autoSizeTextType="uniform"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/button_Chocolate"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/button_cheese"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="48dp"
        android:textColor="#FFFFFF"
        android:onClick="selectItem"
        android:text="@string/cheese"
        app:autoSizeTextType="uniform"
        app:layout_constraintEnd_toStartOf="@+id/button_rice"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/button_Chocolate" />

    <Button
        android:id="@+id/button_rice"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="48dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="16dp"
        android:onClick="selectItem"
        android:textColor="#FFFFFF"
        android:text="@string/rice"
        app:autoSizeTextType="uniform"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/button_cheese"
        app:layout_constraintTop_toBottomOf="@+id/button_eggs" />

    <Button
        android:id="@+id/button_wheat"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="48dp"
        android:onClick="selectItem"
        android:textColor="#FFFFFF"
        android:text="@string/wheat_flour"
        app:autoSizeTextType="uniform"
        app:layout_constraintEnd_toStartOf="@+id/button_bread"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/button_cheese" />

    <Button
        android:id="@+id/button_bread"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="48dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="16dp"
        android:onClick="selectItem"
        android:textColor="#FFFFFF"
        android:text="@string/bread"
        app:autoSizeTextType="uniform"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/button_wheat"
        app:layout_constraintTop_toBottomOf="@+id/button_rice" />

    <Button
        android:id="@+id/button_sugar"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="48dp"
        android:textColor="#FFFFFF"
        android:onClick="selectItem"
        android:text="@string/sugar"
        app:autoSizeTextType="uniform"
        app:layout_constraintEnd_toStartOf="@+id/button_salt"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/button_wheat" />

    <Button
        android:id="@+id/button_salt"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="48dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="16dp"
        android:onClick="selectItem"
        android:text="@string/salt"
        app:autoSizeTextType="uniform"
        android:textColor="#FFFFFF"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/button_sugar"
        app:layout_constraintTop_toBottomOf="@+id/button_bread" />

    <Button
        android:id="@+id/button_oil"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="48dp"
        android:onClick="selectItem"
        android:text="@string/oil"
        android:textColor="#FFFFFF"
        app:autoSizeTextType="uniform"
        app:layout_constraintEnd_toStartOf="@+id/button_milk"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/button_sugar" />

    <Button
        android:id="@+id/button_Chocolate"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="48dp"
        android:onClick="selectItem"
        android:text="@string/chocolate"
        android:textColor="#FFFFFF"
        app:autoSizeTextType="uniform"
        app:layout_constraintEnd_toStartOf="@+id/button_eggs"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />


</androidx.constraintlayout.widget.ConstraintLayout>